test/Fail/Issue2788.err
Issue2788.agda:8,1-28: error: [GenericError]
Missing option --cubical or --erased-cubical
when checking the pragma BUILTIN EQUIV Equiv
